# content

./: .gitignore  FRONTEND_DEVELOPER_GUIDE.md  HOW_TO_RUN.md  README.md  package-lock.json  package.json
backend/: .env.example  .gitignore  alembic.ini  migrate_state_to_db.py  pyproject.toml  test_content_intelligence.py
backend/app/: __init__.py  database.py  main.py
backend/app/api/: deps.py  schemas.py  ws.py
backend/app/api/routes/: __init__.py  analytics.py  articles.py  drafts.py  engagement.py  health.py  pipeline.py  publish.py
backend/app/core/: config.py  logging.py
backend/app/llm/: __init__.py  pipeline.py  service.py
backend/app/llm/prompts/: __init__.py  base.py  engagement.py  framer.py  instagram.py  intelligence.py  (+8 more)
backend/app/models/: __init__.py  article.py  db_models.py  draft.py  engagement.py  publish.py  schedule.py
backend/app/repositories/: __init__.py  articles.py  drafts.py  engagement.py  pipeline.py  schedules.py
backend/app/scheduler/: __init__.py  jobs.py  runner.py
backend/app/services/: content_intelligence.py  engagement.py  virality_scoring.py
backend/app/sources/: __init__.py  rss.py  tavily_client.py
backend/app/state/: __init__.py  models.py  persistence.py  store.py
backend/app/workflows/: ingest.py  publish.py
backend/legal_content_os_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/migrations/: env.py
backend/migrations/versions/: 001_increase_draft_id_length.py
backend/tests/: conftest.py  test_dispatch.py  test_llm_stub.py  test_persistence.py  test_rss.py  test_schedule.py
(+30 files in other folders)
